--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="skolmaten.png" alt="loga">
+        <img src="skolmaten.png" alt="skolmaten">
             <h1>
                 Skolmaten växjö
             </h1>
@@ -19,27 +19,87 @@
         <div id="matsedel">
         <section>
             <img src="" alt="">
-            <h2></h2><!--Vecka-->
+            <h2>V.00</h2><!--Vecka-->
             <img src="" alt="">
         </section>
         <section> <!--Måndag-->
             <h3>Måndag</h3>
+            <div>
+                <p>
+                    <big>Lunch 1 </big>
+                    köttbullar
+                </p>
+                <p>
+                    <big>Lunch 2 </big>
+                </p>
+                <p>
+                    <big>Lunch 3 </big>
+                </p>
+            </div>
      <!--SKAPA ALLT VIA JS-->
         </section>
         <section> <!--Tisdag-->
             <h3>Tisdag</h3>
+            <div>
+                <p>
+                    <big>Lunch 1 </big>
+                    köttbullar
+                </p>
+                <p>
+                    <big>Lunch 2 </big>
+                </p>
+                <p>
+                    <big>Lunch 3 </big>
+                </p>
+            </div>
      <!--SKAPA ALLT VIA JS-->
         </section>
         <section> <!--Onsdag-->
             <h3>Onsdag</h3>
+            <div>
+                <p>
+                    <big>Lunch 1 </big>
+                    köttbullar
+                </p>
+                <p>
+                    <big>Lunch 2 </big>
+                </p>
+                <p>
+                    <big>Lunch 3 </big>
+                </p>
+            </div>
      <!--SKAPA ALLT VIA JS-->
         </section>
         <section> <!--Torsdag-->
             <h3>Torsdag</h3>
+            <div>
+                <p>
+                    <big>Lunch 1 </big>
+                    köttbullar
+                </p>
+                <p>
+                    <big>Lunch 2 </big>
+                </p>
+                <p>
+                    <big>Lunch 3 </big>
+                </p>
+            </div>
      <!--SKAPA ALLT VIA JS-->
         </section>
         <section> <!--Fredag-->
             <h3>Fredag</h3>
+            <div>
+                <p>
+                    <big>Lunch 1 </big>
+                    köttbullar
+                </p>
+                <p>
+                    <big>Lunch 2 </big>
+                </p>
+                <p>
+                    <big>Lunch 3 </big>
+                </p>
+            </div>
     <!--SKAPA ALLT VIA JS-->
         </section>
     </div>
