--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="skolmaten.png" />
     <link rel="stylesheet" href="index.css">
     <title>Matsedel</title>
 </head>
@@ -26,14 +27,12 @@
                 <h3>Måndag</h3>
                 <div>
                     <p>
-                        <big>Lunch 1 </big>
-                        köttbullar
+                        <strong>Lunch 1 </strong>
+                        Moussaka "Grekisk potatis- och grönsaksgratäng på ärtfärs" serveras med salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 2 </big>
-                    </p>
-                    <p>
-                        <big>Lunch 3 </big>
+                        <strong>Lunch 2 </strong>
+                        Karibisk kycklinggryta serveras med havreris och kokt broccoli samt salladsbuffé
                     </p>
                 </div>
         <!--SKAPA ALLT VIA JS-->
@@ -42,14 +41,12 @@
                 <h3>Tisdag</h3>
                 <div>
                     <p>
-                        <big>Lunch 1 </big>
-                        köttbullar
+                        <strong>Lunch 1 </strong>
+                        Potatis- och zucchiniplättar serveras med rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 2 </big>
-                    </p>
-                    <p>
-                        <big>Lunch 3 </big>
+                        <strong>Lunch 2 </strong>
+                        Spaghetti Bolognese "Pastasås på nötfärs" serveras med salladsbuffé
                     </p>
                 </div>
         <!--SKAPA ALLT VIA JS-->
@@ -58,14 +55,16 @@
                 <h3>Onsdag</h3>
                 <div>
                     <p>
-                        <big>Lunch 1 </big>
-                        köttbullar
+                        <strong>Lunch 1 </strong>
+                        Ugnspannkaka serveras med ärtor, rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 2 </big>
+                        <strong>Lunch 2 </strong>
+                        Blodpudding serveras med rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 3 </big>
+                        <strong>Lunch 3 </strong>
+                        Kroppkakor /kroppkakerulle serveras med skirat smör och broccoli, rårörda lingon samt salladsbuffé
                     </p>
                 </div>
         <!--SKAPA ALLT VIA JS-->
@@ -74,15 +73,14 @@
                 <h3>Torsdag</h3>
                 <div>
                     <p>
-                        <big>Lunch 1 </big>
-                        köttbullar
+                        <strong>Lunch 1 </strong>
+                        Ost- och broccolisås serveras med pasta och salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 2 </big>
+                        <strong>Lunch 2 </strong>
+                        Chilikyckling serveras med ugnsrostad potatis och salladsbuffe
                     </p>
-                    <p>
-                        <big>Lunch 3 </big>
-                    </p>
+                   
                 </div>
         <!--SKAPA ALLT VIA JS-->
             </section>
@@ -90,14 +88,12 @@
                 <h3>Fredag</h3>
                 <div>
                     <p>
-                        <big>Lunch 1 </big>
-                        köttbullar
+                        <strong>Lunch 1 </strong>
+                        Chili sin carne serveras med havreris och salladsbuffé
                     </p>
                     <p>
-                        <big>Lunch 2 </big>
-                    </p>
-                    <p>
-                        <big>Lunch 3 </big>
+                        <strong>Lunch 2 </strong>
+                        Lasagne al forno "Lasagne tillagad med kalkonfärs och grönsaker" serveras med salladsbuffé
                     </p>
                 </div>
         <!--SKAPA ALLT VIA JS-->
