bytte strong till span

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="skolmaten.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="skolmaten.png">
     <link rel="stylesheet" href="index.css">
     <title>Matsedel</title>
 </head>
@@ -27,11 +27,11 @@
                 <h3>Måndag</h3>
                 <div>
                     <p>
-                        <strong>Lunch 1 </strong>
+                        <span>Lunch 1 </span>
                         Moussaka "Grekisk potatis- och grönsaksgratäng på ärtfärs" serveras med salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 2 </strong>
+                        <span>Lunch 2 </span>
                         Karibisk kycklinggryta serveras med havreris och kokt broccoli samt salladsbuffé
                     </p>
                 </div>
@@ -41,11 +41,11 @@
                 <h3>Tisdag</h3>
                 <div>
                     <p>
-                        <strong>Lunch 1 </strong>
+                        <span>Lunch 1 </span>
                         Potatis- och zucchiniplättar serveras med rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 2 </strong>
+                        <span>Lunch 2 </span>
                         Spaghetti Bolognese "Pastasås på nötfärs" serveras med salladsbuffé
                     </p>
                 </div>
@@ -55,15 +55,15 @@
                 <h3>Onsdag</h3>
                 <div>
                     <p>
-                        <strong>Lunch 1 </strong>
+                        <span>Lunch 1 </span>
                         Ugnspannkaka serveras med ärtor, rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 2 </strong>
+                        <span>Lunch 2 </span>
                         Blodpudding serveras med rårörda lingon och salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 3 </strong>
+                        <span>Lunch 3 </span>
                         Kroppkakor /kroppkakerulle serveras med skirat smör och broccoli, rårörda lingon samt salladsbuffé
                     </p>
                 </div>
@@ -73,11 +73,11 @@
                 <h3>Torsdag</h3>
                 <div>
                     <p>
-                        <strong>Lunch 1 </strong>
+                        <span>Lunch 1 </span>
                         Ost- och broccolisås serveras med pasta och salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 2 </strong>
+                        <span>Lunch 2 </span>
                         Chilikyckling serveras med ugnsrostad potatis och salladsbuffe
                     </p>
                    
@@ -88,11 +88,11 @@
                 <h3>Fredag</h3>
                 <div>
                     <p>
-                        <strong>Lunch 1 </strong>
+                        <span>Lunch 1 </span>
                         Chili sin carne serveras med havreris och salladsbuffé
                     </p>
                     <p>
-                        <strong>Lunch 2 </strong>
+                        <span>Lunch 2 </span>
                         Lasagne al forno "Lasagne tillagad med kalkonfärs och grönsaker" serveras med salladsbuffé
                     </p>
                 </div>
