--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main>
         <div id="matsedel">
             <section>
-                <img src="" alt=""> <!--pil vänster-->
+                <img src="vänsterpil.png" alt="vänsterpil"> <!--pil vänster-->
                 <h2>V.00</h2><!--Vecka-->
-                <img src="" alt=""> <!--pil höger-->
+                <img src="högerpil.png" alt="högerpil"> <!--pil höger-->
             </section>
             <section> <!--Måndag-->
                 <h3>Måndag</h3>
