--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="skolmaten.png">
+    <script src="JavaScripts.js" defer></script>
     <link rel="stylesheet" href="index.css">
     <title>Matsedel</title>
 </head>
