--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main>
         <div id="matsedel">
             <section>
-                <img src="vänsterpil.png" alt="vänsterpil"> <!--pil vänster-->
+                <img src="vänsterpil.png" id="vänsterpil" alt="vänsterpil"> <!--pil vänster-->
                 <h2></h2><!--Vecka-->
-                <img src="högerpil.png" alt="högerpil"> <!--pil höger-->
+                <img src="högerpil.png" id="högerpil" alt="högerpil"> <!--pil höger-->
             </section>
         </div>
     </main>
